# xverif

./: .gitattributes  .gitignore  Makefile  README.md
kberif/: Makefile  README.md  pyproject.toml
kberif/kberif/: agent.py  cards.py  cli.py  errors.py  hooks.py  init_flow.py  io.py  kout.py  manifest.py  paths.py  prompt.py  query.py  templates.py  topics.py
kberif/kberif/config/: __init__.py
kberif/kberif/config/templates/bt/prompts/: backpressure.md  checker.md  credit.md  debug.md  design_overview.md  fifos.md  interfaces.md  ordering.md  project.md  risks.md  rm.md  scheduling.md  sequence.md  test_creation.md  test_env.md  workflow.md
kberif/kberif/config/templates/it/prompts/: agent.md  coverage.md  debug.md  driver.md  env_overview.md  item.md  monitor.md  project.md  rm.md  scoreboard.md  sequence.md  test_creation.md  workflow.md
kberif/kberif/config/templates/soc/prompts/: boot_flow.md  debug.md  firmware.md  interconnect.md  interrupt.md  low_power.md  memory_map.md  project.md  reset_clock_power.md  scenario.md  system_overview.md  test_env.md  (+1 more)
kberif/tests/: test_bt_flow.py
kbit/: Makefile  README.md  kbit  pyproject.toml
kbit/src/kbit/: __init__.py  bitvector.py  check.py  cli.py  errors.py  eval.py  format.py  literal.py  ops.py
kbit/src/kbit/agent/: __init__.py  stdio.py
kbit/tests/: test_kbit.py
kcov/: Makefile  README.md  pyproject.toml
kcov/kcov/: __init__.py  actions.py  backend.py  cli.py  errors.py  logging.py  protocol.py  query.py  schemas.py  session.py
kcov/tcl_engine/: kcov_npi.tcl
kcov/tests/: test_kcov.py
(+1843 files in other folders)
