[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kberif"
version = "0.3.0"
description = "Agent context summary cards for chip verification projects"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "jsonschema>=4.22",
  "tomli-w>=1.0",
  "pathspec>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.4",
]

[project.scripts]
kberif = "kberif.cli:app"

[tool.setuptools.packages.find]
include = ["kberif*"]

[tool.setuptools.package-data]
kberif = ["config/templates/**/*.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
