[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kcov"
version = "0.1.0"
description = "AI-oriented VCS/Verdi coverage database query engine"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
kcov = "kcov.cli:main"

[tool.setuptools.packages.find]
where = ["."]
